--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
     "@angular/router": "4.0.0",
+    "angular-tslint-rules": "^1.0.3",
     "core-js": "2.4.1",
     "ng2f-bootstrap": "^0.0.4",
     "ng2f-server": "^0.2.3",
@@ -28,10 +29,11 @@
     "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "concurrently": "3.2.0",
-    "typescript": "2.1.1",
     "@types/core-js": "0.9.34",
-    "@types/node": "6.0.46"
+    "@types/node": "6.0.46",
+    "concurrently": "3.2.0",
+    "tslint": "^5.6.0",
+    "typescript": "^2.1.1"
   },
   "repository": {}
 }
